Fix Firefox wrong height calculations

--- a/app/client/views/footer/footer.styl
+++ b/app/client/views/footer/footer.styl
@@ -4,8 +4,6 @@
 
 .main-container
   footer
-    flex-grow 0
-    flex-shrink 0
     width 100%
     background bgColor
     //background red
