--- a/app/client/views/home/home.styl
+++ b/app/client/views/home/home.styl
@@ -15,8 +15,6 @@
       opacity 0
       animation fadeIn 1s 4s ease-in-out forwards
     header
-      height 100%
-      min-height 100vh
       // Create a new context for overlapping video
       z-index 1
       transform translateZ(0)
@@ -45,10 +43,8 @@
           flex-shrink 0
           opacity 0
           animation fadeInDown 1s 1s ease-in-out forwards
-          //absolute top 50% left 50%
           width 60%
           z-index 1
-          //transform translate3d(-50%, -50%, 0)
           >.svg-logo-container
             filter drop-shadow(0 0 5px rgba(black, 50%))
             asvlasoireeBigLogo(100%)
